maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: warning: enclosing method getBisctuit has result type Unit: return value discarded
        return tracechemin(i,j,0);
        ^JediEscaper:84: error: type mismatch;
 found   : Unit
 required: Boolean
  if(getBisctuit()){
                ^